# thedes

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  crates.js  help.html  index.html  last-log.sh  run-dev.sh  search-index.js  settings.html  src-files.js
alsa/: all.html  enum.Direction.html  enum.Round.html  enum.ValueOr.html  index.html  struct.Error.html  struct.Output.html  type.Result.html
alsa_sys/: all.html  (+1928 more)
channel/: Cargo.toml
channel/src/: error.rs  lib.rs
common/: Cargo.toml
common/src/: biome.rs  block.rs  error.rs  ground.rs  health.rs  human.rs  language.rs  lib.rs  map.rs  npc.rs  player.rs  seed.rs  thede.rs  version.rs
common/src/map/: test.rs
libthedes/: Cargo.toml  all.html  index.html  sidebar-items.js
libthedes/client/: fn.run.html  fn.start.html  index.html
libthedes/domain/: enum.Biome.html  enum.Ground.html  index.html  sidebar-items.js  struct.GameSnapshot.html  struct.HumanLocation.html  struct.Map.html  struct.MapCell.html  struct.Player.html  type.Coord.html  type.PlayerName.html
libthedes/domain/human/: index.html  struct.Location.html
libthedes/domain/map/: enum.Biome.html  enum.Ground.html  index.html  sidebar-items.js  struct.Cell.html  struct.Slice.html
libthedes/domain/plane/: index.html  sidebar-items.js  type.Coord.html
libthedes/domain/player/: enum.InvalidName.html  index.html  sidebar-items.js  struct.Name.html  struct.NameAsciiChars.html  struct.OptionalName.html  struct.Player.html
libthedes/domain/state/: index.html  sidebar-items.js  struct.GameSnapshot.html
libthedes/error/: index.html  sidebar-items.js  type.Error.html  type.Result.html
libthedes/message/: constant.MAGIC_BEGIN.html  constant.MAGIC_END.html  constant.MAX_LENGTH.html  enum.ClientRequest.html  enum.GetPlayerError.html  enum.LoginError.html  enum.MoveClientPlayerError.html  fn.bincode_options.html  fn.receive.html  fn.send.html  fn.try_receive.html  index.html  sidebar-items.js  struct.GetPlayerRequest.html  struct.GetPlayerResponse.html  struct.GetSnapshotError.html  struct.GetSnapshotRequest.html  struct.GetSnapshotResponse.html  struct.LoginRequest.html  struct.LoginResponse.html  struct.LogoutError.html  struct.LogoutNotice.html  struct.LogoutRequest.html  struct.LogoutResponse.html  struct.MoveClientPlayerRequest.html  struct.MoveClientPlayerResponse.html
libthedes/server/: index.html  struct.Server.html
libthedes/src/: client.rs  domain.rs  error.rs  lib.rs  message.rs  server.rs
libthedes/src/domain/: human.rs  map.rs  plane.rs  player.rs  state.rs
server/: Cargo.toml
server/src/: human.rs  language.rs  lib.rs  map.rs  npc.rs  player.rs  random.rs  save.rs  thede.rs
server/src/random/: noise.rs  seed.rs  weighted.rs
server/src/thede/: structures.rs
thedes-app/: Cargo.toml
thedes-app/src/: lib.rs  load_game.rs  play.rs  root.rs  session.rs  settings.rs
thedes-app/src/play/: new.rs
thedes-app/src/root/: game_creation.rs  load_game.rs  new_game.rs
thedes-app/src/session/: command.rs  dev.rs  pause.rs  paused.rs  running.rs  script.rs
thedes-async-rt/: Cargo.toml
thedes-async-rt/src/: extensions.rs  lib.rs  local.rs  macros.rs  native.rs  sync.rs  task.rs  time.rs  wasm.rs
thedes-async-rt/src/native/: sync.rs  task.rs  time.rs
thedes-async-rt/src/native/extensions/: entrypoint.rs
thedes-async-rt/src/native/sync/: mpsc.rs  oneshot.rs
thedes-async-rt/src/sync/: mpsc.rs  oneshot.rs
thedes-async-rt/src/wasm/: extensions.rs  sync.rs  task.rs  time.rs
thedes-async-rt/src/wasm/extensions/: callback.rs  task.rs
thedes-async-rt/src/wasm/extensions/callback/: multi.rs  once.rs  shared.rs
thedes-async-rt/src/wasm/sync/: mpsc.rs  mutex.rs  oneshot.rs  rwlock.rs
thedes-bin/: Cargo.toml
thedes-bin/src/: main.rs
thedes-domain/: Cargo.toml
thedes-domain/src/: bitpack.rs  block.rs  event.rs  game.rs  game2.rs  gen.rs  geometry.rs  item.rs  lib.rs  map.rs  matter.rs  monster.rs  player.rs  stat.rs  thede.rs  time.rs
thedes-gen/: Cargo.toml
thedes-gen/src/: event.rs  game.rs  lib.rs  map.rs  matter.rs  progress.rs  random.rs  sm.rs  thede.rs
thedes-gen/src/map/: layer.rs  structure.rs
thedes-gen/src/map/layer/: block.rs  matter.rs  pointwise.rs  region.rs  sparse_points.rs  thede.rs
thedes-gen/src/map/structure/: graph.rs  thede.rs
thedes-session/: Cargo.toml
thedes-session/src/: camera.rs  lib.rs
thedes-tui/: Cargo.toml
thedes-tui-core/: Cargo.toml
thedes-tui-core/src/: app.rs  color.rs  event.rs  geometry.rs  grapheme.rs  input.rs  lib.rs  mutation.rs  runtime.rs  screen.rs  status.rs
thedes-tui-core/src/color/: basic.rs  brightness.rs  channel_vector.rs  grayscale.rs  legacy_rgb.rs  native_ext.rs  rgb.rs
thedes-tui-core/src/event/: native_ext.rs
thedes-tui-core/src/input/: device.rs
thedes-tui-core/src/input/device/: mock.rs  null.rs
thedes-tui-core/src/panic/: restore.rs
thedes-tui-core/src/panic/restore/: mock.rs  native.rs
thedes-tui-core/src/runtime/: device.rs
thedes-tui-core/src/runtime/device/: mock.rs  native.rs  null.rs
thedes-tui-core/src/screen/: device.rs
thedes-tui-core/src/screen/device/: mock.rs  native.rs
thedes-tui/src/: app.rs  cancellability.rs  color.rs  component.rs  config.rs  event.rs  geometry.rs  grapheme.rs  info.rs  input.rs  key_bindings.rs  lib.rs  menu.rs  mutation.rs  panic.rs  progress_bar.rs  runtime.rs  screen.rs  style.rs  text.rs  tick.rs  tile.rs  tty_screen_device.rs
thedes-tui/src/color/: basic.rs  brightness.rs  cmy.rs  eight_bit.rs  gray.rs  legacy_rgb.rs  mutation.rs  pair.rs  rgb.rs  test.rs
thedes-tui/src/component/: info.rs  input.rs  menu.rs  task.rs
thedes-tui/src/info/: style.rs
thedes-tui/src/input/: device.rs  style.rs
thedes-tui/src/input/device/: native.rs  null.rs
thedes-tui/src/menu/: style.rs
thedes-tui/src/panic/restore/: native.rs  null.rs
thedes-tui/src/progress_bar/: style.rs
thedes-tui/src/runtime/: device.rs
thedes-tui/src/runtime/device/: native.rs  null.rs
thedes-tui/src/screen/: device.rs
thedes-tui/src/screen/device/: native.rs  null.rs
thedes-tui/src/text/: style.rs
(+46280 files in other folders)
