[workspace]
resolver = "3"
members = ["thedes-bin", "thedes-tui"]

[workspace.dependencies]
thiserror = "2.0.12"
pin-project = "1.1.10"
futures = "0.3.31"
async-stream = "0.3.6"
tokio = { version = "1.44.1", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "io-std",
    "fs",
    "time",
    "sync",
] }
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
chrono = "0.4.40"
directories = "6.0.0"
