[workspace]
resolver = "3"
members = [
    "thedes-app",
    "thedes-async-util",
    "thedes-bin",
    "thedes-domain", "thedes-ecs",
    "thedes-gen",
    "thedes-geometry",
    "thedes-session",
    "thedes-storage",
    "thedes-tui",
    "thedes-tui-core",
]

[workspace.dependencies]
thiserror = "2.0.12"
pin-project = "1.1.10"
futures = "0.3.31"
async-stream = "0.3.6"
tokio = { version = "1.44.1", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "io-std",
    "fs",
    "time",
    "sync",
] }
tokio-util = { version = "0.7.14", features = ["rt"] }
rand = "0.9.0"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.140"
tracing = "0.1.41"
chrono = "0.4.40"
directories = "6.0.0"
num = "0.4.3"
async-trait = "0.1.88"
trait-variant = "0.1.2"
unicode-segmentation = "1.12.0"
