[package]
name = "thedes-channel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "^0.1.52"

[dependencies.thedes-common]
path = "../common"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.gardiz]
git = "https://github.com/brunoczim/gardiz"
branch = "main"
features = ["impl-serde"]
