[package]
name = "thedes-app"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
rand = { workspace = true }
num = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thedes-domain = { path = "../thedes-domain" }
thedes-geometry = { path = "../thedes-geometry" }
thedes-graphics = { path = "../thedes-graphics" }
thedes-gen = { path = "../thedes-gen" }
thedes-tui = { path = "../thedes-tui" }
