[package]
name = "thedes-app"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
num = { workspace = true }
thedes-tui = { path = "../thedes-tui" }
thedes-geometry = { path = "../thedes-geometry" }
thedes-domain = { path = "../thedes-domain" }
thedes-session = { path = "../thedes-session" }
