[package]
name = "thedes"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = "^0.4"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
directories = "^5.0"
thedes-tui = { path = "../thedes-tui" }
thedes-app = { path = "../thedes-app" }
