[package]
name = "thedes-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
thedes-tui = { path = "../thedes-tui" }
thedes-app = { path = "../thedes-app" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = []
runtime-load = ["thedes-app/runtime-load"]
