[package]
name = "thedes-domain"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
indexmap = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_chacha = "^0.3"
thedes-geometry = { path = "../thedes-geometry" }
