[package]
name = "thedes-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
thedes-geometry = { path = "../thedes-geometry" }
thedes-storage = { path = "../thedes-storage" }
thedes-ecs = { path = "../thedes-ecs" }
