[package]
name = "thedes-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
thedes-geometry = { path = "../thedes-geometry" }
thedes-entity = { path = "../thedes-entity" }
