[package]
name = "thedes-session"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
thedes-domain = { path = "../thedes-domain" }
thedes-geometry = { path = "../thedes-geometry" }
thedes-graphics = { path = "../thedes-graphics" }
thedes-tui = { path = "../thedes-tui" }
