[package]
name = "thedes-session"
version = "0.1.0"
edition = "2024"

[dependencies]
num = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
thedes-domain = { path = "../thedes-domain" }
thedes-tui = { path = "../thedes-tui" }
thedes-geometry = { path = "../thedes-geometry" }
thedes-gen = { path = "../thedes-gen" }

[dev-dependencies]
tokio = { workspace = true }
