[package]
name = "thedes-tui-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
unicode-segmentation = { workspace = true }
futures = { workspace = true }
crossterm = "0.28.1"
thedes-async-util = { path = "../thedes-async-util" }
thedes-geometry = { path = "../thedes-geometry" }
